# deBerenReviews

./: .gitignore  README.md  pyproject.toml
app/: complaints.py  config.py  eda.py  export.py  features.py  io_utils.py  llm_suggestions.py  llm_top_terms.py  main.py  ml_keywords.py  modeling.py  preprocess.py  sentiment.py  stopwords.txt
data/: deBerenReviews.csv
outputs/: average_rating.csv  avg_rating_over_time.csv  business_suggestions.csv  business_suggestions.txt  complaint_category_counts.csv  ratings_distribution.csv  reviews_enriched.csv  reviews_enriched.xlsx  sentiment_counts.csv  sentiment_distribution.csv  top_pain_points.csv  top_terms_per_sentiment.csv  top_terms_per_sentiment.txt
